<resources>
    <string name="app_name">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="app_error_msg">应用程序出错了</string>
    <integer name="progress_value">100</integer>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="error_code">错误码：</string>
    <string name="connect_error">无法连接到服务器</string>
    <string name="error_1002">用户名或者密码错误</string>
    <string name="wechat">微信</string>
    <string name="chats">微信</string>
    <string name="discover">发现</string>
    <string name="contacts">通讯录</string>
    <string name="me">我</string>
    <string name="empty_contacts">您还没有添加任何好友</string>
    <string name="empty_chats">聊天记录为空</string>
    <string name="send">发送</string>
    <string  name="normal">按住 说话</string>
    <string  name="recording">松开 结束</string>
    <string  name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="picture">照片</string>


</resources>
