<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    tools:context="org.free.chat.actvities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/focus_selector"
        android:focusable="true"
        android:orientation="horizontal">

        <TextView
            style="@style/edit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/edit_text_label_padding"
            android:text="@string/account"
            android:textSize="@dimen/edit_text_label_font_size" />

        <EditText
            android:id="@+id/et_account"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_account"
            android:paddingLeft="@dimen/edit_text_padding_left" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:orientation="horizontal">

        <TextView
            style="@style/edit_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/edit_text_label_padding"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_password"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/edit_text_padding_left" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/button_enable"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button_green_selector"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@color/button_text"
            android:textSize="@dimen/button_font_size" />

        <com.github.rahatarmanahmed.cpv.CircularProgressView
            android:id="@+id/cp_login_progressbar"
            android:layout_width="@dimen/button_loading_progressbar_width"
            android:layout_height="@dimen/button_loading_progressbar_height"
            android:visibility="gone"
            app:cpv_animAutostart="false"
            app:cpv_color="@android:color/white"
            app:cpv_indeterminate="true" />

    </LinearLayout>

</LinearLayout>
